<resources>
    <string name="app_name">VelVisit</string>
    <string name="get_started_text">Get Started</string>
    <string name="vel_visit_title">Vel-Visit</string>
    <string name="vel_visit_intro_subtitle">Visitor Management System</string>
    <string name="next_btn_text">Next</string>
    <string name="welcome_screen_title">Welcome to Velvisit</string>
    <string name="welcome_screen_sub_title">ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur…</string>
    <string name="welcome_screen_role_selection_text">Please select you role in office</string>
    <string name="vel_visit_employee_login_title">Employee Login</string>
    <string name="login_label">Login</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="singup_employee">Not Yet Memebr? Create One</string>
    <string name="agree_terms_radio_text">I agree to terms &amp; Conditions</string>
    <string name="employee_authorization_screen_text">Employee Authorization</string>
    <string name="employee_authorization_full_name_text">FULL NAME/EMPID</string>
    <string name="employee_authorization_email_text">EMAIL ADDRESS</string>
    <string name="employee_authorization_btn_text">Authorize</string>
    <string name="employee_create_password_screen_title">Create Password</string>
    <string name="employee_create_password_screen_password">PASSWORD</string>
    <string name="employee_create_password_screen_confirm_password">CONFIRM PASSWORD</string>
    <string name="employee_create_password_btn_txt">Create</string>

    <string name="add_invitee_name">Enter Invitee Name :</string>
    <string name="add_invitee_email_address">Enter Invitee Email Address :</string>
    <string name="add_invitee_mobile">Enter Invitee Mobile No :</string>
    <string name="add_invitee_select_purpose">Select Invitee purpose :</string>

    <string name="add_invitee_name_input_hint">First &amp; Last Name</string>
    <string name="add_invitee_email_input_hint">Em@il</string>
    <string name="add_invitee_mobile_no_hint">+91 </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="velsol_logo">velsol_logo</string>
    <string name="employee_login_user_name_hint">EMAIL/PHONE</string>
    <string name="employee_login_password_hint">PASSWORD</string>
</resources>
