<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@android:color/transparent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/velsol"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_screen_title"
                android:gravity="center"
                android:textSize="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_screen_sub_title"
                android:gravity="center"
                android:textSize="16dp"
                android:fontFamily="@font/roboto_thin"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    style="@style/welcome_screen_labelt_style"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/welcome_screen_role_selection_text"
                    android:textSize="19dp" />
                <RadioGroup
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <RadioButton
                        android:id="@+id/radio_employees"
                        style="@style/welcome_screen_radio_btn_style"
                        android:text="Employees" />

                    <RadioButton
                        android:id="@+id/radio_vms_admin"
                        android:text="Vms Admin"
                        style="@style/welcome_screen_radio_btn_style" />
                </RadioGroup>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/welcome_screen_next_btn"
                android:text="@string/next_btn_text"
                style="@style/welcome_screen_next_btn_style" />

        </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>